--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-generator": "^4.16.0",
     "faker": "^4.1.0",
     "helmet": "^3.12.1",
     "nodemon": "^1.18.3",
+    "pg": "^7.4.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "sequelize": "^4.38.0",
     "styled-components": "^3.3.3"
   },
   "devDependencies": {
